# YoloImageConverter

./: CMakeLists.txt  dataSplit.cpp  main.cpp  vcpkg.json
